[ETCM-313] and [ETCM-316]: Header skeleton using new branch resolver (#892)
* create actor FastSyncBranchResolver

* ETCM-313 Download skeleton and then batch headers in parallel

* Implement HeaderSkeleton class

* Validate if skeleton header matches downloaded batch

* Improve validations

* Handle wrong skeleton from master peer

* Fix incorrect example

* Validate PoW of skeleton headers

* Fix bugs found with tests

* Add call to the branch resolver

* Add missing config entries

* Fix unit tests

* Apply scalafmt

* Cleanup tests

* Fastsync: stick with the same master peer while requesting skeleton headers.

* [ETCM-313] Integrate branch resolver actor with fast sync

* [ETCM-313] Fix integration tests, format error messages

* create actor FastSyncBranchResolver

* create actor FastSyncBranchResolver

* [ETCM-316] Fast-sync branch resolver (#887)

* init new actor, FastSyncBranchResolver

* added searching mode in fast sync branch resolver

* fix style

* add schedule when don't get peers

* Added ut in class FastSyncBranchResolver

* change messages

* fix case object...

* add new unit test

* add new unit test

* change name getFirstCommonBlock

* change name to batch

* init new actor, FastSyncBranchResolver

* added searching mode in fast sync branch resolver

* fix style

* add schedule when don't get peers

* Added ut in class FastSyncBranchResolver

* change messages

* fix case object...

* add new unit test

* add new unit test

* create actor FastSyncBranchResolver

* change name getFirstCommonBlock

* change name to batch

* Reformat triggered by sbt pp

* Cleanup and simplify

* Handle error cases

* Fix tests

* [ETCM-316] Add more tests and fix binary search logic

* [ETCM-316] Finish tests for branch resolving

* [ETCM-316] Cleanup

* [ETCM-316] Small test improvements

* [ETCM-316] Log binary search state

* [ETCM-316] Move some logging to

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -369,7 +369,9 @@ mantis {
     max-concurrent-requests = 50
 
     # Requested number of block headers when syncing from other peers
-    block-headers-per-request = 200
+    # Will cause an error if it's higher than max-blocks-headers-per-message of the peer we're requesting from,
+    # so this number should not be set very high.
+    block-headers-per-request = 100
 
     # Requested number of block bodies when syncing from other peers
     block-bodies-per-request = 128
@@ -469,6 +471,10 @@ mantis {
     # (peer.bestKnownBlock - pivot-block-offset) - node.curentPivotBlock > max-pivot-age
     # it fast sync pivot block has become stale and it needs update
     max-pivot-block-age = 96
+
+    # Maximum number of retries performed by fast sync when the master peer sends invalid block headers.
+    # On reaching this limit, it will perform branch resolving.
+    fast-sync-max-batch-retries = 5
   }
 
   pruning {
