--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -332,6 +332,8 @@ mantis {
     testnet-internal-nomad {include required("chains/testnet-internal-nomad-chain.conf")}
 
     testnet-internal-gac {include required("chains/testnet-internal-gac-chain.conf")}
+	
+    pottery	{include required("chains/pottery-chain.conf")}
   }
 
   sync {
