allow custom-genesis-file to contain the genesis object directly to work around problems with relative paths to json files

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -319,19 +319,19 @@ mantis {
   blockchains {
     network = "etc"
 
-    etc {include "chains/etc-chain.conf"}
+    etc {include required("chains/etc-chain.conf")}
 
-    eth {include "chains/eth-chain.conf"}
+    eth {include required("chains/eth-chain.conf")}
 
-    mordor {include "chains/mordor-chain.conf"}
+    mordor {include required("chains/mordor-chain.conf")}
 
-    ropsten {include "chains/ropsten-chain.conf"}
+    ropsten {include required("chains/ropsten-chain.conf")}
 
-    test {include "chains/test-chain.conf"}
+    test {include required("chains/test-chain.conf")}
 
-    testnet-internal-nomad {include "chains/testnet-internal-nomad-chain.conf"}
+    testnet-internal-nomad {include required("chains/testnet-internal-nomad-chain.conf")}
 
-    testnet-internal-gac {include "chains/testnet-internal-gac-chain.conf"}
+    testnet-internal-gac {include required("chains/testnet-internal-gac-chain.conf")}
   }
 
   sync {
