--- a/src/main/resources/conf/chains/mordor-chain.conf
+++ b/src/main/resources/conf/chains/mordor-chain.conf
@@ -109,7 +109,7 @@
 
   # Custom genesis JSON file path
   # null value indicates using default genesis definition that matches the main network
-  custom-genesis-file = "chains/mordor-genesis.json"
+  custom-genesis-file = { include required("mordor-genesis.json") }
 
   # Monetary policy parameters
   # Doc: https://github.com/ethereumproject/ECIPs/blob/master/ECIPs/ECIP-1017.md
