ETCM-697: Fixed state root calculation when block mining in ets. Added storing of contract codes and storage data

--- a/src/main/resources/conf/testmode.conf
+++ b/src/main/resources/conf/testmode.conf
@@ -14,10 +14,15 @@ mantis {
 
   blockchains {
     network = "test"
+
+    test {
+        chain-id = 1
+
+        istanbul-block-number = 0
+    }
   }
 
   network.rpc {
     apis = "eth,web3,net,personal,mantis,test,iele,debug,qa,checkpointing"
   }
-
 }
