adding back cache, persist state all at once and avoid inconsistency

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -336,7 +336,7 @@ mantis {
 
   sync {
     # Whether to enable fast-sync
-    do-fast-sync = true
+    do-fast-sync = false
 
     # Interval for updating peers during sync
     peers-scan-interval = 3.seconds
