--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -190,6 +190,5 @@ akka {
   loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
-  log-dead-letters = off
-
+  log-dead-letters = on
 }
