ETS integration RPC endpoints (#966)
Co-authored-by: Jaap van der Plas <jaap.van.der.plas@iohk.io>
Co-authored-by: Dominik Zajkowski <dominik.zajkowsk@iohk.io>

--- a/src/main/resources/conf/testmode.conf
+++ b/src/main/resources/conf/testmode.conf
@@ -14,10 +14,41 @@ mantis {
 
   blockchains {
     network = "test"
+
+    test {
+        chain-id = 1
+
+        frontier-block-number = 0
+
+        homestead-block-number = 0
+
+        eip106-block-number = 0
+
+        eip150-block-number = 0
+
+        eip155-block-number = 0
+
+        eip160-block-number = 0
+
+        eip161-block-number = 0
+
+        byzantium-block-number = 0
+
+        constantinople-block-number = 0
+
+        istanbul-block-number = 0
+
+        atlantis-block-number = 0
+
+        agharta-block-number = 0
+
+        phoenix-block-number = 0
+
+        petersburg-block-number = 0
+    }
   }
 
   network.rpc {
     apis = "eth,web3,net,personal,mantis,test,iele,debug,qa,checkpointing"
   }
-
 }
