--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -626,8 +626,8 @@ mantis {
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  # Not using ${logging.logs-level} because it might be set to TRACE, which our version of Akka doesn't have.
-  loglevel = "INFO"
+  # the effective log level is configured for Logback; this loglevel only determines what is passed to Slf4j 
+  loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
   log-dead-letters-during-shutdown = off
