[WIP] Debug log for akka

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -627,10 +627,10 @@ mantis {
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   # Not using ${logging.logs-level} because it might be set to TRACE, which our version of Akka doesn't have.
-  loglevel = "INFO"
+  loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
-  log-dead-letters-during-shutdown = off
+  log-dead-letters-during-shutdown = on
   log-dead-letters = 5
 
   coordinated-shutdown.phases {
