--- a/src/main/resources/conf/sagano.conf
+++ b/src/main/resources/conf/sagano.conf
@@ -1,1 +1,14 @@
 include "testnet-internal-nomad.conf"
+
+mantis {
+
+	metrics {
+    # Set to `true` iff your deployment supports metrics collection.
+    # We expose metrics using a Prometheus server
+    # We default to `false` here because we do not expect all deployments to support metrics collection.
+    enabled = true
+
+    # The port for setting up a Prometheus server over localhost.
+    port = 13798
+  }
+}
