--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -253,6 +253,15 @@ mantis {
         peer-manager-timeout = 5.seconds
       }
 
+      health {
+        # If the best known block number stays the same for more time than this,
+        # the healthcheck will consider the client to be stuck and return an error
+        no-update-duration-threshold = 30.minutes
+        # If the difference between the best stored block number and the best known block number
+        # is less than this value, the healthcheck will report that the client is synced.
+        syncing-status-threshold = 10
+      }
+
       miner-active-timeout = 5.seconds
     }
   }
