[ETCM-749] Add support for Astor network

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -337,6 +337,8 @@ mantis {
     testnet-internal-gac {include required("chains/testnet-internal-gac-chain.conf")}
 
     pottery	{include required("chains/pottery-chain.conf")}
+
+    astor	{include required("chains/astor-chain.conf")}
   }
 
   sync {
