[ETCM-749] Fixed Astor bootstrap node list

--- a/src/main/resources/conf/astor.conf
+++ b/src/main/resources/conf/astor.conf
@@ -3,7 +3,8 @@ include "base.conf"
 mantis {
   sync {
     # Fast sync is disabled, requires coordination to see if it affects our deployments if we turn this on
-    do-fast-sync = false
+    do-fast-sync = true
+    min-peers-to-choose-pivot-block = 1
   }
 
   blockchains {
