[ETCM-856] fix fork block number handling in tests

--- a/src/main/resources/conf/testmode.conf
+++ b/src/main/resources/conf/testmode.conf
@@ -48,7 +48,11 @@ mantis {
     }
   }
 
-  network.rpc {
-    apis = "eth,web3,net,personal,mantis,test,iele,debug,qa,checkpointing"
+  network {
+    rpc {
+      apis = "eth,web3,net,personal,mantis,test,iele,debug,qa,checkpointing"
+    }
+    automatic-port-forwarding = false
   }
+
 }
