--- a/src/main/resources/conf/testmode.conf
+++ b/src/main/resources/conf/testmode.conf
@@ -49,9 +49,7 @@ mantis {
   }
 
   network {
-    rpc {
-      apis = "eth,web3,net,personal,mantis,test,iele,debug,qa,checkpointing"
-    }
+    rpc.apis = "eth,web3,net,personal,mantis,test,iele,debug,qa,checkpointing"
     automatic-port-forwarding = false
   }
 
