--- a/src/main/resources/conf/astor.conf
+++ b/src/main/resources/conf/astor.conf
@@ -3,7 +3,7 @@ include "base.conf"
 mantis {
   sync {
     # Fast sync is disabled, requires coordination to see if it affects our deployments if we turn this on
-    do-fast-sync = true
+    do-fast-sync = false
     min-peers-to-choose-pivot-block = 1
   }
 
@@ -22,7 +22,7 @@ mantis {
   }
 
   consensus {
-    coinbase = "fe3b557e8fb62b89f4916b721be55ceb828dbd73" # has to be changed for each node
+    coinbase = "46652437Dc2F978952c5F5667533874c294E4E84" # has to be changed for each node
     mining-enabled = false
     protocol = "pow"
   }
