messy draft of mining on demand

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -304,6 +304,12 @@ mantis {
     # In the case of ethash PoW, this means mining new blocks, as specified by Ethereum.
     # In the general case, the semantics are due to the specific consensus implementation.
     mining-enabled = false
+
+    # If true then the consensus protocol uses this node for mining on demand.
+    # mining enabled has priority
+    # In the case of ethash PoW, this means mining new blocks, as specified by Ethereum.
+    # In the general case, the semantics are due to the specific consensus implementation.
+    mining-on-demand = true
   }
 
   # This is the section dedicated to Ethash mining.
