don't default akka.loglevel to DEBUG but put a warning comment instead

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -629,8 +629,11 @@ mantis {
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  # the effective log level is configured for Logback; this loglevel only determines what is passed to Slf4j 
-  loglevel = "DEBUG"
+  
+  # defaults to INFO to prevent any performance impact
+  loglevel = "INFO"
+  loglevel = ${?AKKA_LOGLEVEL}
+  
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
   log-dead-letters-during-shutdown = off
@@ -688,5 +691,6 @@ logging {
   logs-file = "mantis"
 
   # Logs level
+  # NB. be aware you might want to adjust akka.loglevel as well if set to DEBUG
   logs-level = "INFO"
 }
