--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -37,7 +37,7 @@ mantis {
     # Ethereum protocol version
     # Supported versions:
     # 63, 64 (experimental version which enables usage of messages with checkpointing information. In the future after ETCM-355, ETCM-356, it will be 66 probably)
-    protocol-version = 63
+    protocol-version = "eth/63"
 
     server-address {
       # Listening interface for Ethereum protocol connections
