--- a/src/main/resources/conf/testnet-internal-nomad.conf
+++ b/src/main/resources/conf/testnet-internal-nomad.conf
@@ -6,7 +6,7 @@ mantis {
   }
 
   network {
-    protocol-version = 64
+    protocol-version = "etc/64"
 
     discovery {
       discovery-enabled = true
