--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -629,8 +629,11 @@ mantis {
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  # Not using ${logging.logs-level} because it might be set to TRACE, which our version of Akka doesn't have.
+  
+  # defaults to INFO to prevent any performance impact
   loglevel = "INFO"
+  loglevel = ${?AKKA_LOGLEVEL}
+  
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
   log-dead-letters-during-shutdown = off
@@ -688,5 +691,6 @@ logging {
   logs-file = "mantis"
 
   # Logs level
+  # NB. be aware you might want to adjust akka.loglevel as well if set to DEBUG
   logs-level = "INFO"
 }
