[ETCM-841] Remove general purpose protocol version, replace with capabilities list

--- a/src/main/resources/conf/chains/etc-chain.conf
+++ b/src/main/resources/conf/chains/etc-chain.conf
@@ -3,6 +3,11 @@
   # 1 - mainnet, 3 - ropsten, 7 - mordor
   network-id = 1
 
+  # The ID of the accepted chain
+  chain-id = "0x3d"
+
+  capabilities = ["eth/63"]
+
   # Possibility to set Proof of Work target time for testing purposes.
   # null means that the standard difficulty calculation rules are used
   pow-target-time = null
@@ -125,9 +130,6 @@
 
   # Starting nonce of an empty account. Some networks (like Morden) use different values.
   account-start-nonce = "0"
-
-  # The ID of the accepted chain
-  chain-id = "0x3d"
 
   # Custom genesis JSON file path
   # null value indicates using default genesis definition that matches the main network
