--- a/src/main/resources/conf/chains/pottery-chain.conf
+++ b/src/main/resources/conf/chains/pottery-chain.conf
@@ -2,6 +2,8 @@ include "mordor-chain.conf"
   # 1 - mainnet, 3 - ropsten, 7 - mordor, 9 - pottery
   network-id = 9
 
+  capabilities = ["etc/64"]
+
   ecip1098-block-number = "0"
 
   ecip1097-block-number = "0"
