--- a/src/main/resources/conf/chains/test-chain.conf
+++ b/src/main/resources/conf/chains/test-chain.conf
@@ -3,6 +3,8 @@
   # 1 - mainnet, 7 - mordor
   network-id = 1
 
+  capabilities = ["eth/63"]
+
   # Possibility to set Proof of Work target time for testing purposes.
   # null means that the standard difficulty calculation rules are used
   pow-target-time = null
