--- a/src/main/resources/conf/chains/testnet-internal-nomad-chain.conf
+++ b/src/main/resources/conf/chains/testnet-internal-nomad-chain.conf
@@ -3,6 +3,8 @@
     # 1 - mainnet, 3 - ropsten, 7 - mordor
     network-id = 42
 
+    capabilities = ["etc/64"]
+
     # Possibility to set Proof of Work target time for testing purposes.
     # null means that the standard difficulty calculation rules are used
     pow-target-time = 15 seconds
