--- a/src/main/resources/conf/astor.conf
+++ b/src/main/resources/conf/astor.conf
@@ -23,7 +23,7 @@ mantis {
 
   consensus {
     coinbase = "46652437Dc2F978952c5F5667533874c294E4E84" # has to be changed for each node
-    mining-enabled = false
+    mining-enabled = true
     protocol = "pow"
   }
 
