--- a/src/main/resources/conf/chains/etc-chain.conf
+++ b/src/main/resources/conf/chains/etc-chain.conf
@@ -39,7 +39,7 @@
   # EIP-170 max code size (Enabled from Atlantis fork block number)
   # Doc: https://github.com/ethereum/EIPs/issues/170
   # null value indicates there's no max code size for the contract code
-  # TODO improve this configuration format as currently it is not obvious that this is enabled only from some block number
+  # used together with atlantis-block-number or eip161-block-number
   max-code-size = "24576"
 
   # Difficulty bomb pause block number
