ETCM-820: Categorize blacklisting reasons, include in grafana
Fix the dashboard

scalafmt

--- a/src/main/resources/conf/metrics.conf
+++ b/src/main/resources/conf/metrics.conf
@@ -1,5 +1,5 @@
 mantis.metrics {
-  # Set to `true` iff your deployment supports metrics collection.
+  # Set to `true` if your deployment supports metrics collection.
   # We expose metrics using a Prometheus server
   # We default to `false` here because we do not expect all deployments to support metrics collection.
   enabled = false
