ETCM-926 pottery gas limit

--- a/src/main/resources/conf/chains/pottery-chain.conf
+++ b/src/main/resources/conf/chains/pottery-chain.conf
@@ -1,4 +1,4 @@
-include "mordor-chain.conf"
+include "testnet-internal-nomad-chain.conf"
   # 1 - mainnet, 3 - ropsten, 7 - mordor, 9 - pottery
   network-id = 9
 
