[ETCM-354] Do not always use the DAO block for fork id validation

--- a/src/main/resources/conf/chains/ropsten-chain.conf
+++ b/src/main/resources/conf/chains/ropsten-chain.conf
@@ -122,6 +122,9 @@
 
     # List of accounts to be drained
     drain-list = null
+
+    # Tells whether this fork should be included on the fork id list used for peer validation
+    include-on-fork-id-list = true
   }
 
   # Starting nonce of an empty account. Some networks (like Morden) use different values.
