--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,5 @@
-version = "2.7.1"
-align = none
+version = "2.7.5"
+align.preset = some
 maxColumn = 120
+
+rewrite.rules = [AvoidInfix, RedundantBraces, RedundantParens, SortModifiers]
