ETCM-1001 Rename configuration key from consensus to mining

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -273,7 +273,7 @@ mantis {
     get-transaction-from-pool-timeout = 5.seconds
   }
 
-  consensus {
+  mining {
     # Miner's coinbase address
     # Also used in non-Ethash consensus.
     coinbase = "0011223344556677889900112233445566778899"
