--- a/src/rpcTest/resources/privateNetConfig/conf/rpc-test-private.conf
+++ b/src/rpcTest/resources/privateNetConfig/conf/rpc-test-private.conf
@@ -20,7 +20,7 @@ mantis {
     }
   }
 
-  consensus {
+  mining {
     # Miner's coinbase address
     coinbase = "0011223344556677889900112233445566778899"
     mining-enabled = false
