--- a/src/main/resources/conf/base-testnet.conf
+++ b/src/main/resources/conf/base-testnet.conf
@@ -15,7 +15,7 @@ mantis {
     mode = "archive"
   }
 
-  consensus {
+  mining {
     coinbase = "0011223344556677889900112233445566778899" # has to be changed for each node
     mining-enabled = false
     protocol = "restricted-pow"
