--- a/src/main/resources/conf/pottery.conf
+++ b/src/main/resources/conf/pottery.conf
@@ -11,7 +11,7 @@ mantis {
     }
   }
  
-	consensus {
+	mining {
     coinbase = "0011223344556677889900112233445566778899" # has to be changed for each node
     mining-enabled = true
     protocol = "restricted-pow"
