ETCM-972: Add skeleton for future ExecutionSync - fetching part
Scalafmt

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -390,6 +390,9 @@ mantis {
     # Number of peers used to reach consensus = min-peers-to-choose-pivot-block + peers-to-choose-pivot-block-margin
     peers-to-choose-pivot-block-margin = 1
 
+    # Number of peers to fetch the blocks in parallel for execution sync
+    peers-to-fetch-from = 5
+
     # During fast-sync when most up to date block is determined from peers, the actual target block number
     # will be decreased by this value
     pivot-block-offset = 32
