--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -123,6 +123,7 @@ mantis {
     nodes-per-request = 10
     min-peers-to-choose-pivot-block = 2
     peers-to-choose-pivot-block-margin = 1
+    peers-to-fetch-from = 5
     pivot-block-offset = 500
     state-sync-bloom-filter-size = 20000
 
