ETCM-1016 adds vm stanza to pottery

--- a/src/main/resources/conf/pottery.conf
+++ b/src/main/resources/conf/pottery.conf
@@ -26,6 +26,27 @@ mantis {
 		# The port for setting up a Prometheus server over localhost.
 		port = 13798
 	}
+
+  vm {
+    # internal | external
+    mode = "internal"
+
+    external {
+      # possible values are:
+      # - iele: runs a binary provided at `executable-path` with `port` and `host` as arguments (`./executable-path $port $host`)
+      # - kevm: runs a binary provided at `executable-path` with `port` and `host` as arguments (`./executable-path $port $host`)
+      # - mantis: if `executable-path` is provided, it will run the binary with `port` and `host` as arguments
+      #           otherwise mantis VM will be run in the same process, but acting as an external VM (listening at `host` and `port`)
+      # - none: doesn't run anything, expect the VM to be started by other means
+      vm-type = "mantis"
+
+      # path to the executable - optional depending on the `vm-type` setting
+      executable-path = "./bin/mantis-vm"
+
+      host = "127.0.0.1"
+      port = 8888
+    }
+  }
 }
 
 akka {
