[ETCM-1015] Add ECIP-1103 block number to configs

--- a/src/main/resources/conf/chains/etc-chain.conf
+++ b/src/main/resources/conf/chains/etc-chain.conf
@@ -101,6 +101,10 @@
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1099
   ecip1099-block-number = "11700000"
 
+  # Magneto EVM and Protocol Upgrades
+  # https://ecips.ethereumclassic.org/ECIPs/ecip-1103
+  ecip1103-block-number = "13189133"
+
   # ECIP-1049 soft fork block number
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1049
   # https://github.com/ethereumclassic/ECIPs/issues/394
