--- a/src/main/resources/conf/chains/eth-chain.conf
+++ b/src/main/resources/conf/chains/eth-chain.conf
@@ -98,6 +98,10 @@
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1099
   ecip1099-block-number = "1000000000000000000"
 
+  # Magneto EVM and Protocol Upgrades
+  # https://ecips.ethereumclassic.org/ECIPs/ecip-1103
+  ecip1103-block-number = "1000000000000000000"
+
   # DAO fork configuration (Ethereum HF/Classic split)
   # https://blog.ethereum.org/2016/07/20/hard-fork-completed/
   dao {
