update ETS config files following retesteth upgrade

--- a/ets/config/mantis/config
+++ b/ets/config/mantis/config
@@ -13,7 +13,9 @@
       "Byzantium",
       "Constantinople",
       "ConstantinopleFix",
-      "Istanbul"
+      "Istanbul",
+      "Berlin",
+      "London"
     ],
     "additionalForks" : [
       "FrontierToHomesteadAt5",
