[ETCM-1015] Rename magneto fork

--- a/src/main/resources/conf/chains/etc-chain.conf
+++ b/src/main/resources/conf/chains/etc-chain.conf
@@ -103,7 +103,7 @@
 
   # Magneto EVM and Protocol Upgrades
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1103
-  ecip1103-block-number = "13189133"
+  magneto-block-number = "13189133"
 
   # ECIP-1049 soft fork block number
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1049
