--- a/src/main/resources/conf/chains/ropsten-chain.conf
+++ b/src/main/resources/conf/chains/ropsten-chain.conf
@@ -104,7 +104,7 @@
 
   # Magneto EVM and Protocol Upgrades
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1103
-  ecip1103-block-number = "1000000000000000000"
+  magneto-block-number = "1000000000000000000"
 
   # DAO fork configuration (Ethereum HF/Classic split)
   # https://blog.ethereum.org/2016/07/20/hard-fork-completed/
