[ETCM-1028] fix retesteth config after version upgrade to v0.1.1-eip1559 (#1068)
* update ETS config files following retesteth upgrade

* [ETCM-1028] remove berlin from the list of supported forks

--- a/ets/config/mantis/config
+++ b/ets/config/mantis/config
@@ -13,7 +13,8 @@
       "Byzantium",
       "Constantinople",
       "ConstantinopleFix",
-      "Istanbul"
+      "Istanbul",
+      "London"
     ],
     "additionalForks" : [
       "FrontierToHomesteadAt5",
