--- a/src/main/resources/conf/chains/test-chain.conf
+++ b/src/main/resources/conf/chains/test-chain.conf
@@ -3,7 +3,7 @@
   # 1 - mainnet, 7 - mordor
   network-id = 1
 
-  capabilities = ["eth/63"]
+  capabilities = ["eth/63", "eth/64"]
 
   # Possibility to set Proof of Work target time for testing purposes.
   # null means that the standard difficulty calculation rules are used
