[ETCM-844] Re-enable eth/63

--- a/src/main/resources/conf/chains/etc-chain.conf
+++ b/src/main/resources/conf/chains/etc-chain.conf
@@ -6,7 +6,7 @@
   # The ID of the accepted chain
   chain-id = "0x3d"
 
-  capabilities = ["eth/64"]
+  capabilities = ["eth/63", "eth/64"]
 
   # Possibility to set Proof of Work target time for testing purposes.
   # null means that the standard difficulty calculation rules are used
