--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -334,7 +334,7 @@ mantis {
 
   sync {
     # Whether to enable fast-sync
-    do-fast-sync = true
+    do-fast-sync = false
 
     # Interval for updating peers during sync
     peers-scan-interval = 3.seconds
@@ -582,7 +582,7 @@ mantis {
 
   vm {
     # internal | external
-    mode = "internal"
+    mode = "external"
 
     external {
       # possible values are:
@@ -591,7 +591,7 @@ mantis {
       # - mantis: if `executable-path` is provided, it will run the binary with `port` and `host` as arguments
       #           otherwise mantis VM will be run in the same process, but acting as an external VM (listening at `host` and `port`)
       # - none: doesn't run anything, expect the VM to be started by other means
-      vm-type = "mantis"
+      vm-type = "none"
 
       # path to the executable - optional depending on the `vm-type` setting
       executable-path = "./bin/mantis-vm"
