Make the VMServer config fit Sagano

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -591,10 +591,10 @@ mantis {
       # - mantis: if `executable-path` is provided, it will run the binary with `port` and `host` as arguments
       #           otherwise mantis VM will be run in the same process, but acting as an external VM (listening at `host` and `port`)
       # - none: doesn't run anything, expect the VM to be started by other means
-      vm-type = "none"
+      vm-type = "mantis"
 
       # path to the executable - optional depending on the `vm-type` setting
-      executable-path = "./bin/mantis-vm"
+#       executable-path = "./bin/mantis-vm"
 
       host = "127.0.0.1"
       port = 8888
