[ETCM-942] Add Muir Glacier block height to configs

--- a/src/main/resources/conf/chains/test-chain.conf
+++ b/src/main/resources/conf/chains/test-chain.conf
@@ -99,6 +99,10 @@
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1099
   ecip1099-block-number = "1000000000000000000"
 
+  # Muir Glacier fork block number
+  # https://eips.ethereum.org/EIPS/eip-2387
+  muir-glacier-block-number = "1000000000000000000"
+
   # Magneto EVM and Protocol Upgrades
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1103
   magneto-block-number = "1000000000000000000"
