--- a/src/main/resources/conf/chains/etc-chain.conf
+++ b/src/main/resources/conf/chains/etc-chain.conf
@@ -101,6 +101,10 @@
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1099
   ecip1099-block-number = "11700000"
 
+  # Muir Glacier fork block number
+  # https://eips.ethereum.org/EIPS/eip-2387
+  muir-glacier-block-number = "1000000000000000000"
+
   # Magneto EVM and Protocol Upgrades
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1103
   magneto-block-number = "13189133"
