[ETCM-1049] Add Berlin block height to config

--- a/src/main/resources/conf/chains/etc-chain.conf
+++ b/src/main/resources/conf/chains/etc-chain.conf
@@ -109,6 +109,9 @@
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1103
   magneto-block-number = "13189133"
 
+  # Berlin fork block number (ETH only)
+  berlin-block-number = "1000000000000000000"
+
   # ECIP-1049 soft fork block number
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1049
   # https://github.com/ethereumclassic/ECIPs/issues/394
