--- a/src/main/resources/conf/chains/testnet-internal-nomad-chain.conf
+++ b/src/main/resources/conf/chains/testnet-internal-nomad-chain.conf
@@ -106,6 +106,9 @@
     # https://ecips.ethereumclassic.org/ECIPs/ecip-1103
     magneto-block-number = "1000000000000000000"
 
+    # Berlin fork block number (ETH only)
+    berlin-block-number = "1000000000000000000"
+
     # DAO fork configuration (Ethereum HF/Classic split)
     # https://blog.ethereum.org/2016/07/20/hard-fork-completed/
     dao = null
