add config option for periodic consistency check and default to false
this feature can interfere with fast sync and is mostly useful for deployments

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -567,6 +567,9 @@ mantis {
 
     # Define which database to use [rocksdb]
     data-source = "rocksdb"
+
+    # Run database checks every 10 mins and shut down when an inconsistency is found
+    periodic-consistency-check = false
   }
 
   filter {
