use new configuration option for fast to regular sync switch delay

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -354,6 +354,9 @@ mantis {
     # Also retry interval in regular sync: for picking blocks batch and retrying requests
     sync-retry-interval = 0.5 seconds
 
+    # Delay between finishing fast sync and starting regular sync
+    sync-switch-delay = 0.5 seconds
+
     # Response time-out from peer during sync. If a peer fails to respond within this limit, it will be blacklisted
     peer-response-timeout = 30.seconds
 
