--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -113,6 +113,7 @@ mantis {
     start-retry-interval = 500.millis
     fastsync-throttle = 100.millis
     sync-retry-interval = 1.second
+    sync-switch-delay = 0
     peer-response-timeout = 1.second
     print-status-interval = 1.hour
 
