activate Berlin tests

--- a/ets/config/mantis/config
+++ b/ets/config/mantis/config
@@ -14,6 +14,7 @@
       "Constantinople",
       "ConstantinopleFix",
       "Istanbul",
+      "Berlin",
       "London"
     ],
     "additionalForks" : [
