[ETCM-1161] revert FastSync to version before header skeleton (#1117)
* revert FastSync to version before header skeleton as there are still some issues with it
* delay switching to regular sync to improve reliability, minor tweak to log output
* change pivot retry logic to pick next-highest one instead of picking a slightly lower one
* add config option for periodic consistency check and default to false

--- a/src/main/resources/conf/base.conf
+++ b/src/main/resources/conf/base.conf
@@ -354,6 +354,9 @@ mantis {
     # Also retry interval in regular sync: for picking blocks batch and retrying requests
     sync-retry-interval = 0.5 seconds
 
+    # Delay between finishing fast sync and starting regular sync
+    sync-switch-delay = 0.5 seconds
+
     # Response time-out from peer during sync. If a peer fails to respond within this limit, it will be blacklisted
     peer-response-timeout = 30.seconds
 
@@ -475,10 +478,6 @@ mantis {
     # On reaching this limit, it will perform branch resolving.
     fast-sync-max-batch-retries = 5
 
-    # If the expected pivot block cannot be confirmed from `min-peers-to-choose-pivot-block`,
-    # the pivot block number is pushed back by the follwing number of blocks and the confirmation process repeats.
-    pivot-block-number-reset-delta = 50
-
     # Max number of times a pivot block is checked against available best peers before the whole process is restarted.
     max-pivot-block-failures-count = 5
   }
@@ -571,6 +570,9 @@ mantis {
 
     # Define which database to use [rocksdb]
     data-source = "rocksdb"
+
+    # Run database checks every 10 mins and shut down when an inconsistency is found
+    periodic-consistency-check = false
   }
 
   filter {
